# give-me-the-money

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  docker-compose.yml  justfile
backend/: .dockerignore  .env.example  .gitignore  API.md  Dockerfile  README.md  db.json  pyproject.toml
backend/app/: api.py  logging.py  main.py  models.py  services.py
backend/app/database/: connection.py  settlement_repository.py
backend/app/image_processing/: __init__.py  enrich_receipt.py  generate_receipt_images.py  model.py  parse_receipt.py  prompts.py  response_formats.py  utils.py  verify_restaurant_lookup.py
backend/app/image_processing/ocr/: exceptions.py  prompts.py  response_formats.py  utils.py
backend/app/image_processing/restaurant_web_search/: __init__.py  exceptions.py  models.py  prompts.py  response_formats.py  service.py  utils.py
backend/scripts/: parse_receipt.py
backend/tests/: test_api.py  test_health.py  test_services.py
backend/tests/image_processing/: test_generate_receipt_images.py  test_model.py  test_parse_receipt.py  test_prompts.py  test_response_formats.py  test_utils.py  test_verify_restaurant_lookup.py
backend/tests/image_processing/restaurant_web_search/: test_ws_prompts.py  test_ws_response_formats.py  test_ws_service.py  test_ws_utils.py
data/: receipt.b64
frontend/: .env.example  .gitignore  AGENTS.md  README.md  eslint.config.js  index.html  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.test.json  vite.config.ts
frontend/.claude/: settings.json
frontend/src/: App.tsx  index.css  (+1 more)
(+50 files in other folders)
